--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,34 +5,8 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
-      <h2>Liste de ce que sait faire mon chien</h2>
-      <p>Mis à jour: {{ lastUpdate | async | date: "short" }}</p>
-      <ul class="list-group">
-        <app-appareil
-          *ngFor="let appareil of appareils; let i = index"
-          [appareilName]="appareil.name"
-          [appareilStatus]="appareil.status"
-          class="mb-3"
-          [index]="i"
-        ></app-appareil>
-      </ul>
-      <button
-        class="btn btn-success"
-        [disabled]="!isAuth"
-        (click)="onAllumer()"
-      >
-        Maitrise Totale
-      </button>
-      <button
-        class="btn btn-success"
-        [disabled]="!isAuth"
-        (click)="onEteindre()"
-      >
-        Aucune Maitrise
-      </button>
+    <div class="col-md-8 col-xs-12">
+      <app-appareil-view></app-appareil-view>
     </div>
   </div>
 </div>
-
-<router-outlet></router-outlet>
