--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,23 @@
   <h1>{{ title }}!</h1>
 </div>
 
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li routerLinkActive="active">
+          <a routerLink="auth">Authentification</a>
+        </li>
+        <li routerLinkActive="active"><a routerLink="appareils">Tours</a></li>
+      </ul>
+      <div class="navbar-right">Connecté depuis {{ secondes }}</div>
+    </div>
+  </div>
+</nav>
 <div class="container">
   <div class="row">
-    <div class="col-md-8 col-xs-12">
-      <app-appareil-view></app-appareil-view>
+    <div class="col-md-12 col-xs-12">
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
