--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -1,5 +1,7 @@
-<h2>Liste de ce que sait faire mon chien</h2>
-<p>Mis à jour: {{ lastUpdate | async | date: "short" }}</p>
+<div class="d-flex justify-content-between align-items-baseline">
+  <h2>Liste de ce que sait faire mon chien</h2>
+  <p class="text-right">Mis à jour: {{ lastUpdate | async | date: "short" }}</p>
+</div>
 <ul class="list-group">
   <app-appareil
     *ngFor="let appareil of appareils; let i = index"
@@ -7,11 +9,14 @@
     [appareilStatus]="appareil.status"
     class="mb-3"
     [index]="i"
+    [id]="appareil.id"
   ></app-appareil>
+</ul>
+<div class="d-flex justify-content-around">
   <button class="btn btn-success" [disabled]="!isAuth" (click)="onAllumer()">
     Maitrise Totale
   </button>
   <button class="btn btn-success" [disabled]="!isAuth" (click)="onEteindre()">
     Aucune Maitrise
   </button>
-</ul>
+</div>
