--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,3 +1,7 @@
-<p>
-  auth works!
-</p>
+<h2>Authentification</h2>
+<button class="btn btn-success" *ngIf="!autStatus" (click)="onSignIn()">
+  Se connecter
+</button>
+<button class="btn btn-danger" *ngIf="autStatus" (click)="onSignOut()">
+  Se déconnecter
+</button>
