--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,9 @@
           <a routerLink="auth">Authentification</a>
         </li>
         <li routerLinkActive="active"><a routerLink="appareils">Tours</a></li>
+        <li routerLinkActive="active"><a routerLink="edit">Nouveau tour</a></li>
       </ul>
-      <div class="navbar-right">Connecté depuis {{ secondes }}</div>
+      <div class="navbar-right">Connecté depuis {{ secondes }} secondes!</div>
     </div>
   </div>
 </nav>
